--- a/emailClient/src/main/resources/application.properties
+++ b/emailClient/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.password          = root
 spring.datasource.url               = jdbc:mysql://localhost:3306/osa
 spring.datasource.username          = root
+spring.datasource.password          = root
 
 logging.level.org.hibernate.SQL=debug
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.hibernate.ddl-auto=update
