--- a/emailClient/src/main/resources/application.properties
+++ b/emailClient/src/main/resources/application.properties
@@ -3,8 +3,13 @@ spring.datasource.url               = jdbc:mysql://localhost:3306/osa
 spring.datasource.username          = root
 spring.datasource.password          = root
 
-logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=info
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.springframework = INFO
+ 
+logging.file.path = ./data/logs
+logging.pattern.file = "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
