--- a/emailClient/src/main/resources/application.properties
+++ b/emailClient/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.url               = jdbc:mysql://localhost:3306/osa
 spring.datasource.username          = root
-spring.datasource.password          = root
+spring.datasource.password          = cicacica
 
 logging.level.org.hibernate.SQL=info
 
